--- a/src/main/res/layout/recycler_star.xml
+++ b/src/main/res/layout/recycler_star.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="data"
-            type="com.noname.daggerexam.model.People"/>
+            type="com.noname.daggerexam2.model.People"/>
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
